# final

./: .gitignore  README.md  main.py  plan.md  pyproject.toml  results.json  test.json
data/models/model_max_zero/: evaluation_script.py  model.py
notebooks/: tutorial.ipynb
src/PromotorOptimizer/: __init__.py  validator.py  wrapper.py
src/PromotorOptimizer/Optimizers/: optimizer_abstract.py
src/PromotorOptimizer/controllers/: adaptive_controler.py
src/PromotorOptimizer/core/: types.py  wrapper.py
src/PromotorOptimizer/interpretation/: base.py  integrated_gradients.py  mutagenesis.py  registry.py  saliency.py
src/PromotorOptimizer/models/: base_model_manager.py  model_manager.py  registry.py
src/PromotorOptimizer/models/architectures/: deepstarr.py  genomic_model_zero.py
src/PromotorOptimizer/models/datasets/: dna_dataset.py
src/PromotorOptimizer/models/loaders/: deepstarr_loader.py  zero_loader.py
src/PromotorOptimizer/optimizers/: base_optimizer.py  beam_search.py  constraint_handler.py  mutation_generator.py  optimizer_abstract.py  random_mutation_optimizer.py  registry.py
src/PromotorOptimizer/pipeline/: configs.py  experiment_tracker.py  exporters.py  runner.py
src/PromotorOptimizer/utils/: preprocessing.py
src/package_name/: main.py
